fixed spacing issue on comp specs screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,10 @@ section{
     margin: 5px;
 }
 
+.ad{
+    padding-bottom: 50px;
+}
+
 .tble-two{
     background-color: #3D5C65;
     border: 1px solid #fff;
